<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="gone"/>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/main_menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bottom_main"
        app:elevation="10dp"
        app:itemIconTint="@drawable/selector_bottom_item"
        app:itemTextColor="@drawable/selector_bottom_item"/>

    <View
        android:id="@+id/v_shadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_above="@id/main_menu"
        android:background="@drawable/shape_shadow"/>

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/v_shadow"/>

</RelativeLayout>
